[package]
name = "pagemap-scan-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.1"
clap = { version = "4.5.4", features = ["derive"] }
libc = "0.2"
rustix = { version = "1.0.8", features = ["param"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.30.1", features = ["mman"] }
